--- a/src/gui/Register.fxml
+++ b/src/gui/Register.fxml
@@ -63,7 +63,7 @@
                </font>
             </Label>
             
-            <ComboBox fx:id="roleCombo" layoutX="128.0" layoutY="295.0" prefWidth="150.0" promptText="choose">
+            <ComboBox fx:id="roleCombo" layoutX="125.0" layoutY="335.0" prefWidth="150.0" promptText="choose">
             <items>
                 <FXCollections fx:factory="observableArrayList">
           <String fx:value="Client" />
@@ -76,7 +76,7 @@
             </FXCollections>
              </items>
             </ComboBox>
-            <Label layoutX="26.0" layoutY="295.0" prefHeight="31.0" prefWidth="65.0" text="role" />
+            <Label layoutX="26.0" layoutY="335.0" prefHeight="31.0" prefWidth="65.0" text="role" />
             <TextField fx:id="rname1" layoutX="25.0" layoutY="76.0" prefHeight="25.0" prefWidth="264.0" promptText="nom" style="-fx-background-color: #;">
                <effect>
                   <InnerShadow color="#1a4a72" />
@@ -97,6 +97,11 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Hyperlink>
+            <TextField fx:id="rphone" layoutX="25.0" layoutY="297.0" prefHeight="25.0" prefWidth="264.0" promptText="telephone" style="-fx-background-color: #;">
+               <effect>
+                  <InnerShadow color="#1a4a72" />
+               </effect>
+            </TextField>
          </children>
          <effect>
             <InnerShadow />
