--- a/src/gui/acceuil.fxml
+++ b/src/gui/acceuil.fxml
@@ -98,14 +98,11 @@
                   <Insets left="12.0" />
                </HBox.margin>
             </FontAwesomeIconView>
-            <ImageView fitHeight="45.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
-               <HBox.margin>
-                  <Insets left="20.0" />
-               </HBox.margin>
-               <image>
-                  <Image url="@../utils/assets/profile.png" />
-               </image>
-            </ImageView>
+            <Label onMouseClicked="#Logout" prefHeight="27.0" prefWidth="65.0" text="Logout">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
          </children>
       </HBox>
       <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="60.0" prefHeight="504.0" prefWidth="1024.0">
